--- a/assets/html/2025-04-28-20243287/space.html
+++ b/assets/html/2025-04-28-20243287/space.html
@@ -6,15 +6,18 @@
   <style>
     body {
       margin: 0;
+      padding: 0;
       display: flex;
       justify-content: center;
+      overflow: hidden;
       align-items: center;
       height: 100vh;
       background-color: #f9f9f9;
     }
     svg {
-      border: 1px solid #ccc;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      width: 100%;
+      height: 100%;
+      display: block;
     }
     text {
       font-family: “Helvetica Neue”, Helvetica, Arial, sans-serif;
