--- a/assets/html/2025-04-28-20243287/space.html
+++ b/assets/html/2025-04-28-20243287/space.html
@@ -2,25 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PLM Mutation‐Space Animation</title>
+  <title>PLM Mutation-Space Animation</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      display: flex;
-      justify-content: center;
-      overflow: hidden;
-      align-items: center;
-      height: 100vh;
-      background-color: #f9f9f9;
-    }
-    svg {
       width: 100%;
       height: 100%;
-      display: block;
+      overflow: hidden;
     }
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+
     text {
-      font-family: “Helvetica Neue”, Helvetica, Arial, sans-serif;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 15px;
       font-weight: bold;
       fill: #000;
@@ -28,87 +27,58 @@
   </style>
 </head>
 <body>
-  <svg width="400" height="400" viewBox="0 0 400 400">
-    <rect
-      x="0" y="0" width="400" height="400"
-      rx="10" ry="10"
-      stroke="#444" stroke-width="5" fill="none"
-    />
-    <text x="200" y="370">Full Mutation Space</text>
+  <svg width="400" height="400" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
+    <rect x="0" y="0" width="400" height="400"
+          rx="10" ry="10"
+          stroke="#444" stroke-width="5" fill="none" />
+    <text x="200" y="370" text-anchor="middle">Full Mutation Space</text>
 
-    <rect
-      x="240" y="10" width="150" height="300"
-      rx="10" ry="10"
-      fill="#3498db"
-      fill-opacity="0.5"
-      stroke="#444"
-      stroke-width="3"
-    />
-    <text x="100" y="310">Mutation Library</text>
+    <rect x="240" y="10" width="150" height="300"
+          rx="10" ry="10"
+          fill="#3498db" fill-opacity="0.5"
+          stroke="#444" stroke-width="3" />
+    <text x="100" y="310" fill="#fff">Mutation Library</text>
+    <line x1="220" y1="310" x2="240" y2="290" stroke="#444" stroke-width="3" />
 
-    <line
-        x1="220" y1="310"
-        x2="240" y2="290"
-        stroke="#444" stroke-width="3"
-    />
+    <rect id="plausible"
+          x="50" y="20" width="270" height="270"
+          rx="10" ry="10"
+          fill="#e67e22" fill-opacity="0.6"
+          stroke="#444" stroke-width="3" />
 
-    <rect
-      id="plausible"
-      x="50" y="20" width="270" height="270"
-      rx="10" ry="10"
-      fill="#e67e22"
-      fill-opacity="0.6"
-      stroke="#444"
-      stroke-width="3"
-    />
-
-    <text id="label_plausible"  transform="translate(82,50)" text-anchor="start">
-        <tspan x="40" y="0">Plausible</tspan>
-        <tspan x="40" y="20">PLM</tspan>
-        <tspan x="40" y="40">Mutations</tspan>
+    <text id="label_plausible" transform="translate(82,50)" text-anchor="start" fill="#fff">
+      <tspan x="40" y="0">Plausible</tspan>
+      <tspan x="40" y="20">PLM</tspan>
+      <tspan x="40" y="40">Mutations</tspan>
     </text>
 
-    <animate
-        xlink:href="#plausible"
-        attributeName="x"
-        dur="5s"
-        values="110; 110; 110; 110"
-        keyTimes="0; 0.333; 0.666; 1"
-        calcMode="linear"
-        repeatCount="indefinite"
-    />
+    <animate xlink:href="#plausible"
+             attributeName="x"
+             dur="5s"
+             values="110; 110; 110; 110"
+             keyTimes="0;0.333;0.666;1"
+             calcMode="linear"
+             repeatCount="indefinite" />
+    <animate xlink:href="#plausible"
+             attributeName="width"
+             dur="5s"
+             values="270; 270; 240; 270"
+             keyTimes="0;0.333;0.666;1"
+             calcMode="linear"
+             repeatCount="indefinite" />
+    <animate xlink:href="#plausible"
+             attributeName="height"
+             dur="5s"
+             values="270; 100; 100; 270"
+             keyTimes="0;0.333;0.666;1"
+             calcMode="linear"
+             repeatCount="indefinite" />
 
-    <animate
-        xlink:href="#plausible"
-        attributeName="width"
-        dur="5s"
-        values="270; 270; 240; 270"
-        keyTimes="0; 0.333; 0.666; 1"
-        calcMode="linear"
-        repeatCount="indefinite"
-    />
-
-    <animate
-        xlink:href="#plausible"
-        attributeName="height"
-        dur="5s"
-        values="270; 100; 100; 270"
-        keyTimes="0; 0.333; 0.666; 1"
-        calcMode="linear"
-        repeatCount="indefinite"
-    />
-
-    <rect
-      x="300" y="0" width="100" height="100"
-      rx="10" ry="10"
-      fill="#FF0000"
-      fill-opacity="0.5"
-      stroke="#444"
-      stroke-width="3"
-    />
-    <text x="305" y="20">High Fitness</text>
-
+    <rect x="300" y="0" width="100" height="100"
+          rx="10" ry="10"
+          fill="#FF0000" fill-opacity="0.5"
+          stroke="#444" stroke-width="3" />
+    <text x="305" y="20" fill="#fff">High Fitness</text>
   </svg>
-
 </body>
 </html>
